--- a/templates/base.html
+++ b/templates/base.html
@@ -130,7 +130,7 @@
 		<title>{% block title %} {% endblock %}</title>
 	</head>
 	<body class="min-h-screen flex flex-col items-start justify-start">
-		<!-- <nav class="bg-gray-800">
+		{% comment %} <!-- <nav class="bg-gray-800">
 			<a href="{% url 'homepage' %}">Home</a>
 			<a href="{% url 'prepare' %}">Prepare Question</a>
 			<a href="{% url 'list' %}">Questions</a>
@@ -138,7 +138,7 @@
 			<a href="{% url 'fakequestion' %}"> Fake 100 Question MAKER</a>
 			<a href="{% url 'examquestion' %}">PAPER</a>
 			<a href="{% url 'notice' %}">NoticeBoard</a>
-		</nav> -->
+		</nav> --> {% endcomment %}
 
 		<nav class="w-full">
 			<div class="bg-gray-900 text-gray-100 h-16 flex items-center">
