--- a/base/templates/base/exam.html
+++ b/base/templates/base/exam.html
@@ -8,33 +8,18 @@ Exam
 
 {% block content %} 
 
-<h1> Exams </h1>
-{% comment %} 
-<ul>
-{% for qsn in questions %}
-<br>
-<li><b>Q.</b> {{ qsn.question }} </li>
-{% for option in qsn.options|get_options %}
-<label>
-    <input type="radio" name="option" value="{{ option }}">
-    {{ option }}
-  </label>
-{% endfor %}
+<h1><b> Exams </b></h1>
 
-<li> {{ qsn.level|get_level }} </li>
-
-
-{% endfor %} {% endcomment %}
 
 <form method="post" action="{% url 'calculate_marks' %}">
     {% csrf_token %}
-    {% for question in questions %}
+    {% for question,count in questions.items %}
       <div>
-        <p><b>Q.</b>{{ question.question }}?</p>
+        <p><b>Q{{count}} . </b>{{ question.question }}?</p>
         {% for option in question.options|get_options %}
-          <label>
+          <label style="padding-left:20px;">
             <input type="radio" name="answer{{ question.id }}" value="{{ option }}">
-            {{ option }}
+                 {{ option }}
           </label>
         {% endfor %}
       </div>
