--- a/base/templates/base/result.html
+++ b/base/templates/base/result.html
@@ -2,5 +2,24 @@ Navbar
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Your marks: {{ total_marks }}</h1>
+<table>
+    <tr>
+      <th>Question</th>
+      <th>Chosen</th>
+      <th>Correct</th>
+    </tr>
+    {% for question,answer in QnA.items %}
+    <tr>
+        <td>{{ question }}</td>
+        {% if answer == question.correct %}
+        <td style="color:green;">{{ answer}}</td>
+        {% else %}
+            <td style="color:red;">{{ answer}}</td>
+        {% endif %}
+        <td>{{ question.correct }}</td>
+    </tr>
+    {% endfor %}
+  </table>
+  
+  <p>Total Marks: {{ total_marks }}</p>
 {% endblock %}
