--- a/templates/base.html
+++ b/templates/base.html
@@ -145,7 +145,7 @@
 				<a
 					class="p-4 container mx-auto text-2xl font-bold uppercase"
 					href="{% url 'homepage' %}"
-					>Online MCQ for College</a
+					>MCQ Test Platform For Class</a
 				>
 			</div>
 		</nav>
