Commit before pull

--- a/base/templates/base/resultList.html
+++ b/base/templates/base/resultList.html
@@ -11,3 +11,18 @@ has columns as:
 
 
 {% endcomment %}
+
+
+{% extends 'base.html' %}
+
+
+{% block title %}
+Results List
+{% endblock %}
+
+
+{% block content %}
+{% for student in students %}
+
+{% endfor %}
+{% endblock %}
