lodin page frontend

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -17,14 +17,14 @@
     <span class="text-3xl font-bold text-center">List</span>
   </a>
 
-  {% comment %}
-  <a
+  
+  {% comment %} <a
     href="{% url 'fakequestion' %}"
     class="w-64 h-64 bg-gray-300 rounded-lg flex justify-center items-center hover:bg-gray-400 duration-300 ease-in-out"
   >
     <span class="text-3xl font-bold text-center">Fake Question</span>
-  </a>
-  {% endcomment %}
+  </a> {% endcomment %}
+ 
 
   <a
     href="{% url 'examquestion' %}"
