--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% comment %} {% extends 'base.html' %}
+
 {% block content %}
 
 <main class="auth layout">
@@ -96,4 +98,81 @@
   {% endif %}
 </main>
 
+{% endblock content %} {% endcomment %}
+
+{% block content %}
+
+<main class="p-5">
+
+  {% if page == 'login' %}
+  <div class="container">
+    <div class="flex flex-col items-center">
+      <div class="my-4">
+        <h3 class="text-lg font-bold">Login</h3>
+      </div>
+      <div>
+       
+
+        <form class="mt-4 border border-gray-300 rounded p-4 flex flex-col gap-2 w-96 bg-white p-6 rounded-lg shadow-md" action="" method="POST">
+          {% csrf_token %}
+          <div class="mb-4">
+            <label for="room_name">Email</label>
+            <input class="bg-gray-100 py-1 indent-2 rounded-md" id="username" name="email" type="email" placeholder="e.g. rupeshghimire@gmail.com" />
+          </div>
+          <div class="mb-4">
+            <label for="password">Password</label>
+            <input class="bg-gray-100 py-1 indent-2 rounded-md" id="password" name="password" type="password" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;" />
+          </div>
+
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+            <span class="mr-2">Login</span>
+            
+          </button>
+        </form>
+
+        <div class="mt-4">
+          <p>Haven't signed up yet?</p>
+          <a href="{% url 'register' %}" class="text-blue-700 hover:text-blue-700">Sign Up</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% else %}
+  <div class="container">
+    <div class="flex flex-col items-center">
+      <div class="my-4">
+        <h3 class="text-lg font-bold">Register</h3>
+      </div>
+      <div>
+        
+        <form class="mt-4 border border-gray-300 rounded p-4 flex flex-col gap-2 w-96 bg-white p-6 rounded-lg shadow-md" action="" method="POST">
+          {% csrf_token %}
+
+          {% for field in form %}
+          <div class="mb-4">
+            <label for="room_name">{{field.label}}</label>
+            {{field}}
+          </div>
+          {% endfor %}
+
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center">
+            <span class="mr-2">Register</span>
+            <svg class="h-4 w-4" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path
+                d="M12 2C6.48 2 2 6.48 2 12v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-4.41 3.59-8 8-8s8 3.59 8 8v2c0 .55.45 1 1 1s1-.45 1-1v-2C22 6.48 17.52 2 12 2zm4 11h-7v5h2v-2h3v-2h-3v-2h3v-2zm-8 1h-2v2H8v-2zm0-4H7v2h1v-2zm0-4H8v2H7V6zm1-4v2H8V2h1zm6 6h-1v2h1v-2zm0 4h-1v2h1v-2zm0 4h-1v2h1v-2zm0-8h-1v2h1v-2z" />
+            </svg>
+          </button>
+        </form>
+
+        <div class="mt-4">
+          <p>Already signed up?</p>
+          <a href="{% url 'login' %}" class="text-blue-500 hover:text-blue-700">Sign In</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endif %}
+</main>
+
 {% endblock content %}
+
