--- a/base/templates/base/listQ.html
+++ b/base/templates/base/listQ.html
@@ -6,26 +6,20 @@ Questionnaire
 {% endblock %}
 
 {% block content %} 
-
-        {% comment %} {% for question in questions %}
-           Q{{question.id}}.> {{question.qn}}  
-            <br>
-            =>> It's answer is : {{question.correct}}  
-            <br>
-            <br>
-        {% endfor %} {% endcomment %}
         
         {% for question in questions %}
         <div>
-          <p><b>Q.</b>{{ question.question }}?</p>
+          <p><b>Q.{{ question.question }}?</b></p>
           <p><b>Ans.</b>{{ question.correct }}</p>
           {% for option in question.options|get_options %}
             <label>
-              <li>
-              {{ option }}
-              </li>
+              <li style="padding-left:25px;">
+              <b>.</b>{{ option }}              <br>
+            </li>
+
             </label>
           {% endfor %}
+          <br><hr>
 {% endfor %}
 
 {% endblock %}
