--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -40,9 +40,18 @@
     <span class="text-3xl font-bold text-center">Notice Board</span>
   </a>
 
+
+
   <a
-    href="{% url 'logout' %}"
-    class="w-64 h-64 bg-rose-600 hover:bg-rose-700 text-white rounded-lg flex justify-center items-center duration-300 ease-in-out"
+  href="{% url 'results' %}"
+  class="w-64 h-64 bg-gray-300 rounded-lg flex justify-center items-center hover:bg-gray-400 duration-300 ease-in-out"
+  >
+    <span class="text-3xl font-bold text-center">Results</span>
+  </a>
+
+  <a
+  href="{% url 'logout' %}"
+  class="w-64 h-64 bg-red-500  hover:bg-rose-800 text-white rounded-lg flex justify-center items-center duration-300 ease-in-out"
   >
     <span class="text-3xl font-bold text-center">Logout</span>
   </a>
@@ -56,18 +65,25 @@
     <span class="text-3xl font-bold text-center">Notice Board</span>
   </a>
 
-  <a
+  {% comment %} <a
     href="{% url 'logout' %}"
     class="w-64 h-64 bg-red-300 rounded-lg flex justify-center items-center duration-300 ease-in-out"
   >
     <span class="text-3xl font-bold text-center">Logout</span>
-  </a>
+  </a> {% endcomment %}
 
   <a
     href="{% url 'examquestion' %}"
     class="w-64 h-64 bg-gray-300 rounded-lg flex justify-center items-center hover:bg-gray-400 duration-300 ease-in-out"
   >
     <span class="text-3xl font-bold text-center">Exam Questions</span>
+  </a>
+
+  <a
+  href="{% url 'logout' %}"
+  class="w-64 h-64 bg-red-500  hover:bg-rose-800 text-white rounded-lg flex justify-center items-center duration-300 ease-in-out"
+  >
+    <span class="text-3xl font-bold text-center">Logout</span>
   </a>
 
   {% else %}
