--- a/base/templates/base/prepareQ.html
+++ b/base/templates/base/prepareQ.html
@@ -5,6 +5,7 @@ Prepare Question
 {% endblock %}
 
 {% block content %} 
+<div class="px-10">
 <div class="flex justify-center items-center min-h-screen w-full">
 
 <form method="POST" action="{% url 'prepare' %}" class="ml-auto mr-[7.5%] flex flex-col gap-2 w-96 bg-white p-6 rounded-lg shadow-md">
@@ -33,7 +34,7 @@ Prepare Question
 
 </form>
 </div>
-
+</div>
 
 
 {% endblock %}
