--- a/base/templates/base/listQ.html
+++ b/base/templates/base/listQ.html
@@ -6,7 +6,7 @@ Questionnaire
 {% endblock %}
 
 {% block content %} 
-        
+<div class="px-10"> 
         {% for question in questions %}
         <div>
           <p><b>Q.{{ question.question }}?</b></p>
@@ -21,5 +21,5 @@ Questionnaire
           {% endfor %}
           <br><hr>
 {% endfor %}
-
+          </div>
 {% endblock %}
