--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -26,12 +26,12 @@
   </a> {% endcomment %}
  
 
-  <a
+  {% comment %} <a
     href="{% url 'examquestion' %}"
     class="w-64 h-64 bg-gray-300 rounded-lg flex justify-center items-center hover:bg-gray-400 duration-300 ease-in-out"
   >
     <span class="text-3xl font-bold text-center">Exam Questions</span>
-  </a>
+  </a> {% endcomment %}
 
   <a
     href="{% url 'notice' %}"
@@ -84,11 +84,11 @@
     <span class="text-3xl font-bold text-center">Subject and Exam Availability</span>
   </a>
 
-  <a
+  {% comment %} <a
     href="{% url 'examquestion' %}"
     class="w-64 h-64 bg-gray-300 rounded-lg flex justify-center items-center hover:bg-gray-400 duration-300 ease-in-out"
   >
-    <span class="text-3xl font-bold text-center">Exam Questions</span>
+    <span class="text-3xl font-bold text-center">Exam Questions</span> {% endcomment %}
   </a>
 
   <a
