--- a/base/templates/base/notices.html
+++ b/base/templates/base/notices.html
@@ -16,11 +16,14 @@
 
 	{% if user.is_staff %}
 	<h1 class="uppercase text-2xl font-semibold my-2">Add a notice:</h1>
-	<form action="" method="POST">
+	<form action="" method="POST" class="mt-4 border border-gray-300 rounded p-4 flex flex-col gap-2 w-96">
 		{% csrf_token %}
+		<div >
+		<div>
 		{{form.as_p}}
-		
-
+		<br>
+		<button type="submit" class="bg-green-500 py-1 w-24 mx-auto text-white rounded-md hover:bg-green-600">Submit</button>
+	</div>
 	{% endif %}
 </main>
 
