--- a/base/templates/base/confirmDelete.html
+++ b/base/templates/base/confirmDelete.html
@@ -12,8 +12,8 @@ Confirmation
     <div class="row">
         <div class="col-md-12">
             <h1>Are you sure to delete all the question?</h1>
-            <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center" href="{% url '/' %}">Back</a>
-            <a class="bg-red-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded flex items-center" href="{% url 'confirm' %}">Confirm Delete</a>
+            <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded flex items-center" href="{% url 'list' %}">Back</a>
+            <a class="bg-red-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded flex items-center" href="{% url 'deleteall' %}">Confirm Delete</a>
         </div>
     </div>
 {% endblock %}
