--- a/base/templates/base/notices.html
+++ b/base/templates/base/notices.html
@@ -2,18 +2,35 @@
 
 <main class="container mx-auto p-4">
 	<h1 class="uppercase text-2xl font-semibold my-2">All notices:</h1>
-
-	<ul class="grid grid-cols-1 gap-2">
-		{% for notice in notices %}
-		<li
-			class="hover:pl-5 py-1.5 duration-300 border-l-4 border-l-transparent hover:border-l-blue-800"
-		>
-			<a href="{% url 'noticeX' notice.id %}"> {{notice}} </a>
-		</li>
-		<hr />
-	</ul>
+	<div class="flex justify-center">
+		<div class="border border-gray-300">
+<table class="w-full">
+	<tr class="border-b border-gray-300">
+		<th class="border-r border-gray-300 px-4 py-2">Notice Title</th>
+		<th class="border-r border-gray-300 px-4 py-2">Edit</th>
+		<th class="border-r border-gray-300 px-4 py-2">Remove</th>
+	</tr>
+		{% for notice in notices %}		
+		<tr class="border-b border-gray-300">
+			<td class="border-r border-gray-300 px-4 py-2">
+			<a href="{% url 'noticeX' notice.id %}" class="hover:pl-5 py-1.5 duration-300 border-l-4 border-l-transparent hover:border-l-blue-800 px-20"> {{notice}} </a>
+		</td>
+		<td class="border-r border-gray-300 px-4 py-2">
+			<button class="bg-transparent hover:bg-gray-300 text-black font-bold py-2 px-4 rounded flex items-center">
+			<span><a href="{% url "updateNotice" notice.id %}">Update</a>
+			</button>
+			</td>
+			<td class="border-r border-gray-300 px-4 py-2">
+				<button class="bg-transparent hover:bg-gray-300 text-black font-bold py-2 px-4 rounded flex items-center" onclick="return confirm('Are you sure you want to delete?')">
+				<span><a href="{% url "deleteNotice" notice.id %}">Delete</a>
+				</button>
+				</td>
+			</tr>
 	{% endfor %}
-
+</table>
+	</div>
+	</div>	
+<br>
 	{% if user.is_staff %}
 	<h1 class="uppercase text-2xl font-semibold my-2">Add a notice:</h1>
 	<form action="" method="POST" class="mt-4 border border-gray-300 rounded p-4 flex flex-col gap-2 w-96">
