--- a/base/templates/base/resultList.html
+++ b/base/templates/base/resultList.html
@@ -27,20 +27,20 @@ Results List
 {% block content %}
 <div class="px-10 py-5">
 <h1>Results List</h1>
-
+<br>
 <div class="flex justify-center">
   <div class="border border-gray-300">
     <table class="w-full">
-      <tr>
-        <th class="border-b border-gray-300 px-4 py-2">Student Name</th>
-        <th class="border-b border-gray-300 px-4 py-2">Marks Obtained</th>
-        <th class="border-b border-gray-300 px-4 py-2">Remarks</th>
+      <tr class="border-b-2 border-gray-300">
+        <th class="border-r-2 border-gray-300 px-4 py-2">Student Name</th>
+        <th class="border-r-2 border-gray-300 px-4 py-2">Marks Obtained</th>
+        <th class="border-r-2 border-gray-300 px-4 py-2">Remarks</th>
       </tr>
       {% for student, remarks in students.items %}
-      <tr>
-        <td class="border-b border-gray-300 px-4 py-2">{{ student.name }}</td>
-        <td class="border-b border-gray-300 px-4 py-2">{{ student.marks }}</td>
-        <td class="border-b border-gray-300 px-4 py-2">{{ remarks|get_remarks }}</td>
+      <tr class="border-b-2 border-gray-300">
+        <td class="border-r-2 border-gray-300 px-4 py-2">{{ student.name }}</td>
+        <td class="border-r-2 border-gray-300 px-4 py-2">{{ student.marks }}</td>
+        <td class="border-r-2 border-gray-300 px-4 py-2">{{ remarks|get_remarks }}</td>
       </tr>
       {% endfor %}
     </table>
