--- a/base/templates/base/updateQuestion.html
+++ b/base/templates/base/updateQuestion.html
@@ -14,7 +14,7 @@
 
 
 
-{% block content %}
+{% comment %} {% block content %}
 <div class="flex justify-center">
   <form action="" method="POST" class="mt-4 border border-gray-300 rounded p-4 w-96">
     {% csrf_token %}
@@ -27,5 +27,39 @@
     <button type="submit" class="bg-green-500 py-1 w-24 mx-auto text-white rounded-md hover:bg-green-600">Update</button>
   </form>
 </div>
-{% endblock content %}
+{% endblock content %} {% endcomment %}
 
+{% block content %} 
+<div class="px-10">
+<div class="flex justify-center items-center min-h-screen w-full">
+
+<form method="POST" action="{% url 'prepare' %}" class="ml-auto mr-[7.5%] flex flex-col gap-2 w-100 bg-white p-6 rounded-lg shadow-md">
+    {% csrf_token %}
+    <label>Question:</label>
+    <input class="bg-gray-100 py-1 indent-2 rounded-md" name="question" placeholder="Enter Question.">
+
+    <label>Option 1:</label>
+    <input class="bg-gray-100 py-1 indent-2 rounded-md" name="option1" placeholder="Enter an option">
+
+    <label>Option 2:</label>
+    <input class="bg-gray-100 py-1 indent-2 rounded-md" name="option2" placeholder="Enter an option">
+    <label>Option 3:</label>
+    <input class="bg-gray-100 py-1 indent-2 rounded-md" name="option3" placeholder="Enter an option">
+
+    <label>Option 4:</label>
+    <input class="bg-gray-100 py-1 indent-2 rounded-md" name="option4" placeholder="Enter an option">
+
+    {{form.as_p}}
+
+    
+
+
+    
+    <button type="submit" class="bg-green-500 py-1 w-24 mx-auto text-white rounded-md hover:bg-green-600">Submit</button>
+
+</form>
+</div>
+</div>
+
+
+{% endblock %}
