--- a/base/templates/base/prepareQ.html
+++ b/base/templates/base/prepareQ.html
@@ -1,10 +1,32 @@
 {% extends 'base.html' %}
 {% load static %}
+
+
+{% block script %}
+// Automatically hide the flash message after 5 seconds
+setTimeout(function() {
+    var flashMessage = document.querySelector('.flash-message');
+    if (flashMessage) {
+        flashMessage.style.display = 'none';
+    }
+}, 4000);
+{% endblock %}
+
 {% block title %} 
 Prepare Question
 {% endblock %}
 
 {% block content %} 
+
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}><div style="color:white;" class="flash-message w-200 h-410 bg-gray-600 rounded-lg flex justify-center items-center"> {{ message }}</div></li>
+    {% endfor %}
+</ul>
+{% endif %}
+
+
 <div class="px-10">
 <div class="flex justify-center items-center min-h-screen w-full">
 
