--- a/base/templates/base/updateQuestion.html
+++ b/base/templates/base/updateQuestion.html
@@ -14,9 +14,10 @@
 
 
 
-{% comment %} {% block content %}
-<div class="flex justify-center">
-  <form action="" method="POST" class="mt-4 border border-gray-300 rounded p-4 w-96">
+{% block content %}
+<div class="px-10">
+<div class="flex justify-center items-center min-h-screen w-full">
+  <form action="" method="POST" class="ml-auto mr-[7.5%] flex flex-col gap-2 w-100 bg-white p-6 rounded-lg shadow-md">
     {% csrf_token %}
     {% for field in form %}
     <div class="mb-4">
@@ -27,8 +28,9 @@
     <button type="submit" class="bg-green-500 py-1 w-24 mx-auto text-white rounded-md hover:bg-green-600">Update</button>
   </form>
 </div>
-{% endblock content %} {% endcomment %}
-
+</div>
+{% endblock content %} 
+{% comment %} 
 {% block content %} 
 <div class="px-10">
 <div class="flex justify-center items-center min-h-screen w-full">
@@ -62,4 +64,4 @@
 </div>
 
 
-{% endblock %}
+{% endblock %} {% endcomment %}
