--- a/base/templates/base/result.html
+++ b/base/templates/base/result.html
@@ -1,6 +1,14 @@
 
 {% extends 'base.html' %}
 
+{% block script %}
+window.onpopstate = function(event) {
+    window.location.href = "{% url 'homepage' %}";
+  };
+
+window.history.pushState(null,null,null);
+{% endblock %}
+
 {% block content %}
 <div class="bg-green-700 justify-center items-center text-white w-20 font-bold py-2 px-4 rounded flex items-center"><a href="javascript:history.back()"> <- </a></div>
 
@@ -8,14 +16,14 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 <div class="container d-flex justify-content-center">
    
-
+<div class="mt-4 border border-gray-300 rounded p-4 flex flex-col gap-2 w-96 bg-white p-6 rounded-lg shadow-md">
 <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
         <div class="card">
             <div class="text-right cross"> <i class="fa fa-times"></i> </div>
             <div class="card-body text-center"> <img src="https://img.icons8.com/bubbles/200/000000/trophy.png" style="display: block; margin: 0 auto;">
                 <h4>CONGRATULATIONS!</h4>
-                <p>Your marks: {{ total_marks }}</p> <button class="btn btn-out btn-square continue">CONTINUE</button>
+                <p>Your marks: {{ total_marks }}</p> <button class="btn btn-out btn-square continue"><a href="javascript:history.back()"> Continue </a></div></button>
             </div>
         </div>
     </div>
@@ -41,5 +49,5 @@
     </tr>
     {% endfor %}
   </table>
-  
+</div>
 {% endblock %}
