--- a/base/templates/base/resultList.html
+++ b/base/templates/base/resultList.html
@@ -16,8 +16,13 @@ has columns as:
 {% endcomment %}
 
 
-
-
+{% block script %}
+// Check if the browser's back button is pressed
+window.addEventListener('popstate', function(event) {
+    // Redirect to the home page when the back button is pressed
+    window.location.href = '/home';
+});
+{% endblock %}
 
 {% block title %}
 Results List
@@ -25,7 +30,7 @@ Results List
 
 
 {% block content %}
-<div class="bg-green-700 justify-center items-center text-white w-20 font-bold py-2 px-4 rounded flex items-center"><a href="javascript:history.back()"> <- </a></div>
+<div class="bg-green-700 justify-center items-center text-white w-20 font-bold py-2 px-4 rounded flex items-center"><a href="{% url 'homepage' %}"> <- </a></div>
 
 <div class="ml-10 mt-4 border border-gray-300 rounded p-4 flex flex-col gap-4 w-96 bg-white p-6 rounded-lg shadow-md">
 {% comment %} <div class="px-10 py-5"> {% endcomment %}
@@ -47,6 +52,10 @@ Results List
       </tr>
       {% endfor %}
     </table>
+    <div class="bg-gray-500 mt-4 justify-center items-center text-white font-bold py-2 px-4 rounded flex items-center hover:bg-green-500">
+      <a href="{% url 'clearattempts' %}"> Clear All Attempts </a>
+    </div>
+
   </div>
 </div>
 {% comment %} </div> {% endcomment %}
