--- a/base/templates/base/result.html
+++ b/base/templates/base/result.html
@@ -22,7 +22,7 @@ window.history.pushState(null,null,null);
         <div class="card">
             <div class="text-right cross"> <i class="fa fa-times"></i> </div>
             <div class="card-body text-center"> <img src="https://img.icons8.com/bubbles/200/000000/trophy.png" style="display: block; margin: 0 auto;">
-                <h4>CONGRATULATIONS!</h4>
+                <h4>{{message}}</h4>
                 <p>Your marks: {{ total_marks }}</p> <button class="btn btn-out btn-square continue"><a href="javascript:history.back()"> Continue </a></div></button>
             </div>
         </div>
