--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,4 +1,18 @@
-{% extends 'base.html' %} {% block title %} RemoteExamination {% endblock %} {% block content %}
+{% extends 'base.html' %} 
+
+{% block script %}
+// Automatically hide the flash message after 5 seconds
+setTimeout(function() {
+    var flashMessage = document.querySelector('.flash-message');
+    if (flashMessage) {
+        flashMessage.style.display = 'none';
+    }
+}, 4000);
+{% endblock %}
+{% block title %} RemoteExamination {% endblock %} 
+
+{% block content %}
+
 <div
   class="container p-4 my-4 mx-auto grid grid-cols-2 lg:grid-cols-4 gap-x-6 gap-y-6"
 >
@@ -112,5 +126,13 @@
 
   {% endif %}
 </div>
+{% if messages %}
+<div class="ml-100 w-100 bg-orange-500 justify-center text-center flash-message">
+  {% for message in messages %}
+  <div class="alert alert-{{ message.tags }}">
+    {{ message }}
+</div>
+{% endfor %}
+{% endif %}
 
 {% endblock content %}
